@@ -1,6 +1,7 @@
 package org.jsoup.select;
 
 import org.jsoup.Jsoup;
+import org.jsoup.TextUtil;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.nodes.Node;
@@ -179,5 +180,17 @@ public class TraversorTest {
         final int[] count = {0};
         NodeTraversor.traverse((node, depth) -> count[0]++, doc);
         assertEquals(7, count[0]);
+    }
+
+    @Test public void canRemoveDuringHead() {
+        Document doc = Jsoup.parse("<div><p id=1>Zero<p id=1>One<p id=2>Two<p>Three</div>");
+        NodeTraversor.traverse((node, depth) -> {
+            if (node.attr("id").equals("1"))
+                node.remove();
+            else if (node instanceof TextNode && ((TextNode) node).text().equals("Three"))
+                node.remove();
+        }, doc);
+
+        assertEquals("<div><p id=\"2\">Two</p><p></p></div>", TextUtil.stripNewlines(doc.body().html()));
     }
 }
