@@ -40,6 +40,8 @@ jsoup changelog
   * Improvement: in the NodeTraversor, added default implementations for NodeVisitor.tail() and NodeFilter.tail(), so
     that code using only head() methods can be written as lambdas.
 
+  * Improvement: in NodeTraversor, added support for removing nodes via Node.remove() during NodeVisitor.head().
+
   * Bugfix: boolean attribute names should be case-insensitive, but were not when the parser was configured to preserve
     case.
     <https://github.com/jhy/jsoup/issues/1656>
